--- a/fundamentos/secao-1-introducao/dia-3-seletores-posicionamento/style3.css
+++ b/fundamentos/secao-1-introducao/dia-3-seletores-posicionamento/style3.css
@@ -2,10 +2,14 @@ h1, p{
     text-align: center;
 }
 
-li:hover{
+li:hover {
     background-color: blueviolet;
 }
 
-li:active{
+li:active {
     font-family: Verdana, Geneva, Tahoma, sans-serif, sans-serif;
+}
+
+li {
+    list-style: none;
 }
